parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> program
Rule 2     program -> external_declaration
Rule 3     program -> program external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     function_definition -> type_specifier ID LPAREN RPAREN compound_statement
Rule 7     declaration -> init_declarator_list SEMI
Rule 8     init_declarator_list -> type_specifier init_declarator
Rule 9     type_specifier -> int
Rule 10    type_specifier -> float
Rule 11    type_specifier -> str
Rule 12    init_declarator -> declarator
Rule 13    init_declarator -> declarator EQUALS initializer
Rule 14    declarator -> ID
Rule 15    initializer -> assignment_expression
Rule 16    statement_list -> statement
Rule 17    statement_list -> statement_list statement
Rule 18    statement -> expression_statement
Rule 19    statement -> declaration
Rule 20    statement -> compound_statement
Rule 21    statement -> selection_statement
Rule 22    statement -> iteration_statement
Rule 23    statement -> jump_statement
Rule 24    expression_statement -> expression SEMI
Rule 25    compound_statement -> LBRACE statement_list RBRACE
Rule 26    compound_statement -> LBRACE RBRACE
Rule 27    selection_statement -> if LPAREN expression RPAREN compound_statement
Rule 28    selection_statement -> if LPAREN expression RPAREN compound_statement else compound_statement
Rule 29    iteration_statement -> while LPAREN expression RPAREN compound_statement
Rule 30    jump_statement -> return expression SEMI
Rule 31    expression -> assignment_expression
Rule 32    assignment_expression -> conditional_expression
Rule 33    assignment_expression -> ID EQUALS assignment_expression
Rule 34    conditional_expression -> logical_or_expression
Rule 35    logical_or_expression -> logical_and_expression
Rule 36    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 37    logical_and_expression -> equality_expression
Rule 38    logical_and_expression -> logical_and_expression LAND equality_expression
Rule 39    equality_expression -> relational_expression
Rule 40    equality_expression -> equality_expression EQ relational_expression
Rule 41    equality_expression -> equality_expression NE relational_expression
Rule 42    relational_expression -> additive_expression
Rule 43    relational_expression -> relational_expression LT additive_expression
Rule 44    relational_expression -> relational_expression GT additive_expression
Rule 45    relational_expression -> relational_expression LE additive_expression
Rule 46    relational_expression -> relational_expression GE additive_expression
Rule 47    additive_expression -> multiplicative_expression
Rule 48    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 49    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 50    multiplicative_expression -> unary_expression
Rule 51    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 52    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 53    unary_expression -> postfix_expression
Rule 54    unary_expression -> LNOT unary_expression
Rule 55    unary_expression -> MINUS unary_expression
Rule 56    unary_expression -> INCREMENT unary_expression
Rule 57    unary_expression -> DECREMENT unary_expression
Rule 58    postfix_expression -> primary_expression
Rule 59    postfix_expression -> ID LPAREN RPAREN
Rule 60    primary_expression -> ID
Rule 61    primary_expression -> INTEGER
Rule 62    primary_expression -> FLOAT
Rule 63    primary_expression -> STR
Rule 64    primary_expression -> LPAREN logical_or_expression RPAREN

Terminals, with rules where they appear

DECREMENT            : 57
DIVIDE               : 52
EQ                   : 40
EQUALS               : 13 33
FLOAT                : 62
GE                   : 46
GT                   : 44
ID                   : 6 14 33 59 60
INCREMENT            : 56
INTEGER              : 61
LAND                 : 38
LBRACE               : 25 26
LE                   : 45
LNOT                 : 54
LOR                  : 36
LPAREN               : 6 27 28 29 59 64
LT                   : 43
MINUS                : 49 55
NE                   : 41
PLUS                 : 48
RBRACE               : 25 26
RPAREN               : 6 27 28 29 59 64
SEMI                 : 7 24 30
STR                  : 63
TIMES                : 51
else                 : 28
error                : 
float                : 10
if                   : 27 28
int                  : 9
return               : 30
str                  : 11
while                : 29

Nonterminals, with rules where they appear

S                    : 0
additive_expression  : 42 43 44 45 46 48 49
assignment_expression : 15 31 33
compound_statement   : 6 20 27 28 28 29
conditional_expression : 32
declaration          : 5 19
declarator           : 12 13
equality_expression  : 37 38 40 41
expression           : 24 27 28 29 30
expression_statement : 18
external_declaration : 2 3
function_definition  : 4
init_declarator      : 8
init_declarator_list : 7
initializer          : 13
iteration_statement  : 22
jump_statement       : 23
logical_and_expression : 35 36 38
logical_or_expression : 34 36 64
multiplicative_expression : 47 48 49 51 52
postfix_expression   : 53
primary_expression   : 58
program              : 1 3
relational_expression : 39 40 41 43 44 45 46
selection_statement  : 21
statement            : 16 17
statement_list       : 17 25
type_specifier       : 6 8
unary_expression     : 50 51 52 54 55 56 57

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . program
    (2) program -> . external_declaration
    (3) program -> . program external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (7) declaration -> . init_declarator_list SEMI
    (9) type_specifier -> . int
    (10) type_specifier -> . float
    (11) type_specifier -> . str
    (8) init_declarator_list -> . type_specifier init_declarator

    int             shift and go to state 8
    float           shift and go to state 9
    str             shift and go to state 10

    S                              shift and go to state 1
    program                        shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    init_declarator_list           shift and go to state 7

state 1

    (0) S' -> S .



state 2

    (1) S -> program .
    (3) program -> program . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (7) declaration -> . init_declarator_list SEMI
    (9) type_specifier -> . int
    (10) type_specifier -> . float
    (11) type_specifier -> . str
    (8) init_declarator_list -> . type_specifier init_declarator

    $end            reduce using rule 1 (S -> program .)
    int             shift and go to state 8
    float           shift and go to state 9
    str             shift and go to state 10

    external_declaration           shift and go to state 11
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    init_declarator_list           shift and go to state 7

state 3

    (2) program -> external_declaration .

    int             reduce using rule 2 (program -> external_declaration .)
    float           reduce using rule 2 (program -> external_declaration .)
    str             reduce using rule 2 (program -> external_declaration .)
    $end            reduce using rule 2 (program -> external_declaration .)


state 4

    (4) external_declaration -> function_definition .

    int             reduce using rule 4 (external_declaration -> function_definition .)
    float           reduce using rule 4 (external_declaration -> function_definition .)
    str             reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 5

    (5) external_declaration -> declaration .

    int             reduce using rule 5 (external_declaration -> declaration .)
    float           reduce using rule 5 (external_declaration -> declaration .)
    str             reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 6

    (6) function_definition -> type_specifier . ID LPAREN RPAREN compound_statement
    (8) init_declarator_list -> type_specifier . init_declarator
    (12) init_declarator -> . declarator
    (13) init_declarator -> . declarator EQUALS initializer
    (14) declarator -> . ID

    ID              shift and go to state 12

    init_declarator                shift and go to state 13
    declarator                     shift and go to state 14

state 7

    (7) declaration -> init_declarator_list . SEMI

    SEMI            shift and go to state 15


state 8

    (9) type_specifier -> int .

    ID              reduce using rule 9 (type_specifier -> int .)


state 9

    (10) type_specifier -> float .

    ID              reduce using rule 10 (type_specifier -> float .)


state 10

    (11) type_specifier -> str .

    ID              reduce using rule 11 (type_specifier -> str .)


state 11

    (3) program -> program external_declaration .

    int             reduce using rule 3 (program -> program external_declaration .)
    float           reduce using rule 3 (program -> program external_declaration .)
    str             reduce using rule 3 (program -> program external_declaration .)
    $end            reduce using rule 3 (program -> program external_declaration .)


state 12

    (6) function_definition -> type_specifier ID . LPAREN RPAREN compound_statement
    (14) declarator -> ID .

    LPAREN          shift and go to state 16
    EQUALS          reduce using rule 14 (declarator -> ID .)
    SEMI            reduce using rule 14 (declarator -> ID .)


state 13

    (8) init_declarator_list -> type_specifier init_declarator .

    SEMI            reduce using rule 8 (init_declarator_list -> type_specifier init_declarator .)


state 14

    (12) init_declarator -> declarator .
    (13) init_declarator -> declarator . EQUALS initializer

    SEMI            reduce using rule 12 (init_declarator -> declarator .)
    EQUALS          shift and go to state 17


state 15

    (7) declaration -> init_declarator_list SEMI .

    int             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    float           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    str             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    $end            reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    RBRACE          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LBRACE          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    if              reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    while           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    return          reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    ID              reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LNOT            reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    MINUS           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    INCREMENT       reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    DECREMENT       reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    INTEGER         reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    FLOAT           reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    STR             reduce using rule 7 (declaration -> init_declarator_list SEMI .)
    LPAREN          reduce using rule 7 (declaration -> init_declarator_list SEMI .)


state 16

    (6) function_definition -> type_specifier ID LPAREN . RPAREN compound_statement

    RPAREN          shift and go to state 18


state 17

    (13) init_declarator -> declarator EQUALS . initializer
    (15) initializer -> . assignment_expression
    (32) assignment_expression -> . conditional_expression
    (33) assignment_expression -> . ID EQUALS assignment_expression
    (34) conditional_expression -> . logical_or_expression
    (35) logical_or_expression -> . logical_and_expression
    (36) logical_or_expression -> . logical_or_expression LOR logical_and_expression
    (37) logical_and_expression -> . equality_expression
    (38) logical_and_expression -> . logical_and_expression LAND equality_expression
    (39) equality_expression -> . relational_expression
    (40) equality_expression -> . equality_expression EQ relational_expression
    (41) equality_expression -> . equality_expression NE relational_expression
    (42) relational_expression -> . additive_expression
    (43) relational_expression -> . relational_expression LT additive_expression
    (44) relational_expression -> . relational_expression GT additive_expression
    (45) relational_expression -> . relational_expression LE additive_expression
    (46) relational_expression -> . relational_expression GE additive_expression
    (47) additive_expression -> . multiplicative_expression
    (48) additive_expression -> . additive_expression PLUS multiplicative_expression
    (49) additive_expression -> . additive_expression MINUS multiplicative_expression
    (50) multiplicative_expression -> . unary_expression
    (51) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (52) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (53) unary_expression -> . postfix_expression
    (54) unary_expression -> . LNOT unary_expression
    (55) unary_expression -> . MINUS unary_expression
    (56) unary_expression -> . INCREMENT unary_expression
    (57) unary_expression -> . DECREMENT unary_expression
    (58) postfix_expression -> . primary_expression
    (59) postfix_expression -> . ID LPAREN RPAREN
    (60) primary_expression -> . ID
    (61) primary_expression -> . INTEGER
    (62) primary_expression -> . FLOAT
    (63) primary_expression -> . STR
    (64) primary_expression -> . LPAREN logical_or_expression RPAREN

    ID              shift and go to state 22
    LNOT            shift and go to state 32
    MINUS           shift and go to state 29
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 34
    INTEGER         shift and go to state 37
    FLOAT           shift and go to state 38
    STR             shift and go to state 39
    LPAREN          shift and go to state 36

    initializer                    shift and go to state 19
    assignment_expression          shift and go to state 20
    conditional_expression         shift and go to state 21
    logical_or_expression          shift and go to state 23
    logical_and_expression         shift and go to state 24
    equality_expression            shift and go to state 25
    relational_expression          shift and go to state 26
    additive_expression            shift and go to state 27
    multiplicative_expression      shift and go to state 28
    unary_expression               shift and go to state 30
    postfix_expression             shift and go to state 31
    primary_expression             shift and go to state 35

state 18

    (6) function_definition -> type_specifier ID LPAREN RPAREN . compound_statement
    (25) compound_statement -> . LBRACE statement_list RBRACE
    (26) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 41

    compound_statement             shift and go to state 40

state 19

    (13) init_declarator -> declarator EQUALS initializer .

    SEMI            reduce using rule 13 (init_declarator -> declarator EQUALS initializer .)


state 20

    (15) initializer -> assignment_expression .

    SEMI            reduce using rule 15 (initializer -> assignment_expression .)


state 21

    (32) assignment_expression -> conditional_expression .

    SEMI            reduce using rule 32 (assignment_expression -> conditional_expression .)
    RPAREN          reduce using rule 32 (assignment_expression -> conditional_expression .)


state 22

    (33) assignment_expression -> ID . EQUALS assignment_expression
    (59) postfix_expression -> ID . LPAREN RPAREN
    (60) primary_expression -> ID .

    EQUALS          shift and go to state 42
    LPAREN          shift and go to state 43
    TIMES           reduce using rule 60 (primary_expression -> ID .)
    DIVIDE          reduce using rule 60 (primary_expression -> ID .)
    PLUS            reduce using rule 60 (primary_expression -> ID .)
    MINUS           reduce using rule 60 (primary_expression -> ID .)
    LT              reduce using rule 60 (primary_expression -> ID .)
    GT              reduce using rule 60 (primary_expression -> ID .)
    LE              reduce using rule 60 (primary_expression -> ID .)
    GE              reduce using rule 60 (primary_expression -> ID .)
    EQ              reduce using rule 60 (primary_expression -> ID .)
    NE              reduce using rule 60 (primary_expression -> ID .)
    LAND            reduce using rule 60 (primary_expression -> ID .)
    LOR             reduce using rule 60 (primary_expression -> ID .)
    SEMI            reduce using rule 60 (primary_expression -> ID .)
    RPAREN          reduce using rule 60 (primary_expression -> ID .)


state 23

    (34) conditional_expression -> logical_or_expression .
    (36) logical_or_expression -> logical_or_expression . LOR logical_and_expression

    SEMI            reduce using rule 34 (conditional_expression -> logical_or_expression .)
    RPAREN          reduce using rule 34 (conditional_expression -> logical_or_expression .)
    LOR             shift and go to state 44


state 24

    (35) logical_or_expression -> logical_and_expression .
    (38) logical_and_expression -> logical_and_expression . LAND equality_expression

    LOR             reduce using rule 35 (logical_or_expression -> logical_and_expression .)
    SEMI            reduce using rule 35 (logical_or_expression -> logical_and_expression .)
    RPAREN          reduce using rule 35 (logical_or_expression -> logical_and_expression .)
    LAND            shift and go to state 45


state 25

    (37) logical_and_expression -> equality_expression .
    (40) equality_expression -> equality_expression . EQ relational_expression
    (41) equality_expression -> equality_expression . NE relational_expression

    LAND            reduce using rule 37 (logical_and_expression -> equality_expression .)
    LOR             reduce using rule 37 (logical_and_expression -> equality_expression .)
    SEMI            reduce using rule 37 (logical_and_expression -> equality_expression .)
    RPAREN          reduce using rule 37 (logical_and_expression -> equality_expression .)
    EQ              shift and go to state 46
    NE              shift and go to state 47


state 26

    (39) equality_expression -> relational_expression .
    (43) relational_expression -> relational_expression . LT additive_expression
    (44) relational_expression -> relational_expression . GT additive_expression
    (45) relational_expression -> relational_expression . LE additive_expression
    (46) relational_expression -> relational_expression . GE additive_expression

    EQ              reduce using rule 39 (equality_expression -> relational_expression .)
    NE              reduce using rule 39 (equality_expression -> relational_expression .)
    LAND            reduce using rule 39 (equality_expression -> relational_expression .)
    LOR             reduce using rule 39 (equality_expression -> relational_expression .)
    SEMI            reduce using rule 39 (equality_expression -> relational_expression .)
    RPAREN          reduce using rule 39 (equality_expression -> relational_expression .)
    LT              shift and go to state 48
    GT              shift and go to state 49
    LE              shift and go to state 50
    GE              shift and go to state 51


state 27

    (42) relational_expression -> additive_expression .
    (48) additive_expression -> additive_expression . PLUS multiplicative_expression
    (49) additive_expression -> additive_expression . MINUS multiplicative_expression

    LT              reduce using rule 42 (relational_expression -> additive_expression .)
    GT              reduce using rule 42 (relational_expression -> additive_expression .)
    LE              reduce using rule 42 (relational_expression -> additive_expression .)
    GE              reduce using rule 42 (relational_expression -> additive_expression .)
    EQ              reduce using rule 42 (relational_expression -> additive_expression .)
    NE              reduce using rule 42 (relational_expression -> additive_expression .)
    LAND            reduce using rule 42 (relational_expression -> additive_expression .)
    LOR             reduce using rule 42 (relational_expression -> additive_expression .)
    SEMI            reduce using rule 42 (relational_expression -> additive_expression .)
    RPAREN          reduce using rule 42 (relational_expression -> additive_expression .)
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 28

    (47) additive_expression -> multiplicative_expression .
    (51) multiplicative_expression -> multiplicative_expression . TIMES unary_expression
    (52) multiplicative_expression -> multiplicative_expression . DIVIDE unary_expression

    PLUS            reduce using rule 47 (additive_expression -> multiplicative_expression .)
    MINUS           reduce using rule 47 (additive_expression -> multiplicative_expression .)
    LT              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    GT              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    LE              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    GE              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    EQ              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    NE              reduce using rule 47 (additive_expression -> multiplicative_expression .)
    LAND            reduce using rule 47 (additive_expression -> multiplicative_expression .)
    LOR             reduce using rule 47 (additive_expression -> multiplicative_expression .)
    SEMI            reduce using rule 47 (additive_expression -> multiplicative_expression .)
    RPAREN          reduce using rule 47 (additive_expression -> multiplicative_expression .)
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 55


state 29
